Initial commit of advanced package project

--- a/package.json
+++ b/package.json
@@ -1,12 +1,42 @@
 {
   "name": "your-advanced-package-name",
   "version": "1.0.0",
+  "description": "An advanced package built for developers who want cutting-edge tools.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest --coverage",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "docs": "jsdoc -c jsdoc.json"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/morningstarxcdcode/packageno1.git"
+  },
+  "keywords": ["advanced", "developer-tools", "cutting-edge", "automation"],
+  "author": "Morningstar",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/morningstarxcdcode/packageno1/issues"
+  },
+  "homepage": "https://github.com/morningstarxcdcode/packageno1#readme",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0",
+    "eslint": "^8.45.0",
+    "prettier": "^3.0.0",
+    "jsdoc": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
